src/test/ui/span/coerce-suggestions.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-suggestions.rs:17:20
   |
17 |     let x: usize = String::new();
   |                    ^^^^^^^^^^^^^ expected usize, found struct `std::string::String`
   |
   = note: expected type `usize`
              found type `std::string::String`
   = help: here are some functions which might fulfill your needs:
           - .capacity()
           - .len()

error[E0308]: mismatched types
  --> $DIR/coerce-suggestions.rs:22:19
   |
22 |     let x: &str = String::new();
   |                   ^^^^^^^^^^^^^
   |                   |
   |                   expected &str, found struct `std::string::String`
   |                   help: consider borrowing here: `&String::new()`
   |
   = note: expected type `&str`
              found type `std::string::String`

error[E0308]: mismatched types
  --> $DIR/coerce-suggestions.rs:28:10
   |
28 |     test(&y);
   |          ^^ types differ in mutability
   |
   = note: expected type `&mut std::string::String`
              found type `&std::string::String`

error[E0308]: mismatched types
  --> $DIR/coerce-suggestions.rs:32:11
   |
32 |     test2(&y);
   |           ^^ types differ in mutability
   |
   = note: expected type `&mut i32`
              found type `&std::string::String`

error[E0308]: mismatched types
  --> $DIR/coerce-suggestions.rs:37:9
   |
37 |     f = box f;
   |         ^^^^^ cyclic type of infinite size

error[E0308]: mismatched types
  --> $DIR/coerce-suggestions.rs:42:9
   |
42 |     s = format!("foo");
   |         ^^^^^^^^^^^^^^
   |         |
   |         expected mutable reference, found struct `std::string::String`
   |         help: consider mutably borrowing here: `&mut format!("foo")`
   |
   = note: expected type `&mut std::string::String`
              found type `std::string::String`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 6 previous errors

